ghc-4335c07/testsuite/tests/typecheck/should_fail/T6018Cfail.hs
{-# LANGUAGE TypeFamilies #-}

module T6018Cfail where

import T6018Bfail

type instance H Int  Char Bool = Bool
type instance H Char Bool Int  = Int
